Adicionado a Activity "JogoZang" e seta a orientação da tela que irá jogar apenas como portrait

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,15 @@
         // Activitys do Jogo
         <activity android:name=".MenuPrincipal" />
         <activity android:name=".GameOver"/>
+        <activity android:name=".Engine.JogoZang"
+            android:screenOrientation="portrait">
+
+            <intent-filter>
+                <action android:name="android.intent.action.JogoZang" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
